03-webserver-deployment-pattern-autoscale.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    run: jojoe-nginx
  name: jojoe-nginx-deploy
  namespace: stmapp-sp3
spec:
  replicas: 2
  selector:
    matchLabels:
      run: jojoe-nginx
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 1
  template:
    metadata:
      labels:
        run: jojoe-nginx
    spec:
      containers:
      #- image: stm-registry.dmp.true.th:443/webdevops/php-nginx:v1.0.1
      - image: montree/jojoe:tagversion
        name: jojoe-nginx
        ports:
          - containerPort: 80
        volumeMounts:
          - name: appdata-nfs
            # mount point in container
            mountPath: /app
          - name: applogs-nfs
            # mount point in container
            mountPath: /logs
      volumes:
        - name: appdata-nfs
          persistentVolumeClaim:
            # PVC name
            claimName: stm-appdata-nfs-pvc-sp3
        - name: applogs-nfs
          persistentVolumeClaim:
            # PVC name
            claimName: stm-applogs-nfs-pvc-sp3
---
apiVersion: v1
kind: Service
metadata:
  name: jojoe-nginx-service
  namespace: stmapp-sp3
  labels:
    run: jojoe-nginx
spec:
  type: ClusterIP
  selector:
    run: webserver
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
---
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: ingress-resource-webserver-sp3
  namespace: stmapp-sp3
spec:
  rules:
  - host: jojoe.example.com
    http:
      paths:
      - backend:
          serviceName: jojoe-nginx-service
          servicePort: 80
